--- a/myapp/src/Components/CardDetails/CardDetails.css
+++ b/myapp/src/Components/CardDetails/CardDetails.css
@@ -2,19 +2,19 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin-bottom: 2rem;
 }
-
-/* .accordion-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem 2rem;
-} */
+.carddetails-wrapper h3 {
+  text-align: center;
+  margin-bottom: unset;
+  color: rgb(13, 110, 253);
+}
 
 .accordion-main {
   display: flex;
   flex-direction: column;
-  gap: 1rem 2rem;
-  width: 85%;
+  gap: 1rem;
+  width: 70%;
   margin: auto;
   background-color: white;
   padding: 2rem;
@@ -30,6 +30,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  margin-top: 1rem;
 }
 .accordion-field-buttons button {
   border: none;
@@ -40,11 +41,11 @@
   background-color: rgb(13, 110, 253);
 }
 .accordion-field-buttons button:hover {
-  background-color: hsl(216, 98%, 40%);
+  background-color: hsl(216, 98%, 35%);
 }
 
 .accordion-main input, select, textarea {
-  border: 1px solid gray;
+  border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 2px;
 }
 .accordion-main select {
@@ -68,6 +69,7 @@
     flex-wrap: wrap;
     flex-direction: column;
     gap: 1rem 2rem;
+    width: 90%;
   }
 }
 
