--- a/myapp/src/Components/Footer/Footer.css
+++ b/myapp/src/Components/Footer/Footer.css
@@ -48,6 +48,7 @@
 @media screen and (max-width: 400px) {
   .footer {
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
+    gap: 2rem;
   }
 }
