--- a/myapp/src/Pages/Login/Login.css
+++ b/myapp/src/Pages/Login/Login.css
@@ -24,7 +24,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: white;
-  width: 30vw;
+  width: 35vw;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0px 0px 5px 0px rgba(158, 158, 158, 0.8);
@@ -43,9 +43,11 @@
 }
 
 .login-form input {
-  border: 2px solid gray;
+  border: 1px solid rgba(128, 128, 128, 0.5);
   border-radius: 6px;
   height: 2.4rem;
+  padding: 0 0.5rem;
+  width: 100%;
 }
 /* .login-form input::placeholder {
   opacity: 0;
@@ -58,42 +60,67 @@
 
 .login-form button {
   border: unset;
-  background-color: #5bb3ff;
+  background-color: rgb(13, 110, 253);
   border-radius: 6px;
   height: 2.4rem;
   color: white;
   width: 10rem;
-  /* padding: 0 2rem; */
   align-self: center;
   transition: all 0.2s ease-in-out;
 }
 
 .login-form button:hover {
-  background-color: hsl(208, 100%, 58%);
+  background-color: hsl(216, 98%, 35%)
 }
 
-@media screen and (max-width: 500px) {
-  .login-form label {
-    display: none;
-  }
+.password-field {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
 
+.password-visibility-toggle {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.inside-login-form {
+  display: flex;
+  gap: 1rem;
+}
+
+
+@media screen and (max-width: 500px) {
   .login-form input::placeholder {
     opacity: 1;
-  }
-
-  .login-body {
-    width: unset;
-    gap: 0;
   }
 
   .login-body h1 {
     margin-bottom: 2rem;
   }
+
+  .inside-login-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .login-wrapper {
+    height: unset;
+    margin: 1rem 0;
+}
 }
 
 @media screen and (max-width: 1000px) {
   .login-body {
-    width: unset;
+    width: 80%;
     gap: 0;
+  }
+  .login-wrapper-logo {
+    margin-top: unset;
+    
   }
 }
